<resources>
    <string name="app_name">Eternity Wall</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="write">Write message</string>
    <string name="btn_send">SEND</string>
    <string name="err_check_internet">Check your Internet connection</string>
    <string name="ask_choose_wallet">Select a Bitcoin Wallet App</string>
    <string name="err_empty_message">Empty messages are not allowed</string>
    <string name="thanks_msg">Your message is being written on the wall.\nLeave your email to be notified when ready.</string>
    <string name="thanks_title">Thank you!</string>
    <string name="btn_notify">NOTIFY ME</string>
    <string name="err_email_address">Please insert a valid email address</string>
    <string name="err_generic">Oops... missing address, something wrong in post message!</string>
    <string name="save">SAVE</string>

    <string name="icon_share">{fa-share-alt}</string>
    <string name="icon_link">{fa-external-link}</string>
    <string name="icon_ranking">{fa-eye}</string>
    <string name="icon_likes">{fa-thumbs-o-up}</string>
    <string name="icon_commenting">{fa-commenting-o}</string>
    <string name="icon_translate">{fa-globe}</string>

    <string name="action_order">Order by</string>
    <string name="action_search">Search</string>
    <string name="action_cloud">Cloud</string>
    <string name="action_preferences">Preferences</string>
    <string name="action_share">Sharing</string>

    <string name="order_replies">Replies</string>
    <string name="order_likes">Likes</string>
    <string name="order_views">Views</string>
    <string name="order_ranking">Ranking</string>
    <string name="order_main">Time</string>
    <string name="order_viewslast7days">Views last 7 days</string>

    <string name="account_fragment">&#xf007;</string>
    <string name="list_fragment">&#xf015;</string>

    <string name="account_fragment_title">Welcome to Eternity Wall</string>
    <string name="account_fragment_subtitle">Create or recover your account</string>

    <string name="btn_recover">Recover</string>
    <string name="btn_create">Create</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_refresh">Refresh</string>

    <string name="font_awesome_bitcoin"></string>

    <string name="title_activity_preferences">Preferences</string>
    <string name="title_activity_debug">Debug Info</string>
    <string name="btn_contact">CONTACT</string>
    <string name="btn_visit">VISIT</string>
    <string name="eternity_wall">Eternity Wall</string>
    <string name="message_lasting_forever">Message lasting forever</string>
    <string name="add">ADD</string>
    <string name="show_passphrase">Show Passphrase</string>
    <string name="use_pin_see_passphrase">Access to passphrase with Pin</string>
    <string name="resync_wallet">Resync Wallet</string>
    <string name="resync_to_blockchain">Resync the wallet to the blockchain</string>
    <string name="empty_wallet">Empty Wallet</string>
    <string name="all_btc_to_address">Send all of your bitcoin to a single address</string>
    <string name="remove_account">Remove Account</string>
    <string name="delete_local_passphrase">Delete current stored passphrase</string>
    <string name="other_settings">Other settings</string>
    <string name="personal_node">Personal Node</string>
    <string name="personal_node_info">Set the address of your personal node, if set and reachable the wallet will sync against this node</string>
    <string name="account">Account</string>
    <string name="donation">Donation</string>
    <string name="donate_info">Donate 0.1 mBTC to Eternity Wall developers when sending messages from account</string>
    <string name="show_info_blockchain">Show information about blockchain</string>
    <string name="debug_info">Debug Info</string>
    <string name="ew_website">www.eternitywall.it</string>
    <string name="about_us">About Us</string>
    <string name="from">From:</string>
    <string name="like_info">Like this message sending any amount to the following address</string>
    <string name="insert_destination">Insert destination address...</string>
    <string name="empty_wallet_question">Are you sure to empty your wallet ?</string>
    <string name="insert_email">insert your email...</string>
    <string name="subscribe_ml">Subscribe also to mailing list (max 1 email/month)</string>
    <string name="notify_if_replies">Notify me when message receives replies</string>
    <string name="add_node">Add node...</string>
    <string name="alias">Alias (max 20 chars)</string>
    <string name="warning_permanent_alias">Choose carefully!\n You can\'t change this account alias</string>
    <string name="register">REGISTER</string>
    <string name="here_passphrase">here will be the passphrase</string>
    <string name="pin_info_where">Use this PIN to view your passphrase from preference settings and confirm sending messages.</string>
    <string name="pin">PIN</string>
    <string name="confirm_pin">Confirm PIN</string>
    <string name="passphrase_info">Your account can only be restored using the above passphrase. Make sure you save it before proceeding. For safety reasons, the passphrase is stored only on your device and not on the servers. If you loose it without backup, it is not recoverable.</string>
    <string name="no_msg_found">No eternity messages found</string>
    <string name="no_notarize_found">No eternity notarized documents found</string>
    <string name="recover_account">Recover account</string>
    <string name="passphrase">passphrase</string>
    <string name="confirm">Confirm</string>
    <string name="syncing">Syncing</string>
    <string name="set_alias">SET ALIAS</string>
    <string name="unconfirmed">unconfirmed</string>
    <string name="date">date</string>
    <string name="message">message</string>
    <string name="unconfirmed_with_parenthesis">(unconfirmed)</string>
    <string name="wallet_warning">Small amount of bitcoin ($1 for example) allow you to write some messages. We don’t recommend to keep big amounts in the EW wallet, you can re-charge any time if it’s the case. There are a lot of full-fledged bitcoin wallet out there that are more appropriate for your savings.</string>
    <string name="syncing_warning">The first time usually requires three minutes, depending on your connection and network state. Afterwards it\'s faster but it depends how frequent the app sync. In case of problems, try resync from the preferences.</string>
    <string name="long_tap_to_delete">long tap to delete</string>
    <string name="btn_change">CHANGE</string>
    <string name="tor_title">Privacy</string>
    <string name="tor_descript">Use the Tor network with Orbot to protect your privacy and hide your IP address</string>


    <string name="qr_icon">{fa-qrcode}</string>
    <string name="title_activity_hidden">HiddenActivity</string>
    <string name="btn_sendhash">Send Hash</string>
    <string name="write_hash_message">Send Hash Message</string>
    <string name="write_hash_message_subtitle">Send the hash of the message</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="replyto">Reply to</string>
    <string name="your_passphrase">Your passphrase</string>
    <string name="your_pin">Your PIN</string>
    <string name="title_activity_notarize">Notarize</string>
    <string name="notarize_fragment_subtitle">To notarize documents you need an account with a confirmed alias</string>
    <string name="notarize_fragment_subtitle_temp">To notarize documents you need an account with a confirmed alias. SOON AVAILABLE!</string>
    <string name="btn_stamp">Show stamp</string>

</resources>
