<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:padding="@dimen/padding_high"
    android:layout_height="match_parent">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/insert_email"
            android:password="true"
            android:textSize="18sp"
            style="@style/EditText" />
    </android.support.design.widget.TextInputLayout>


    <CheckBox
        android:layout_marginTop="@dimen/padding_high"
        android:id="@+id/ckOne"
        android:checked="true"
        android:text="@string/subscribe_ml"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <CheckBox
        android:layout_marginTop="@dimen/padding_high"
        android:id="@+id/ckTwo"
        android:checked="true"
        android:text="@string/notify_if_replies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



</LinearLayout>