<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="16dp"
    tools:context="it.eternitywall.eternitywall.activity.PreferencesActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView2" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView android:text="@string/account" android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primary"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin" />




            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_high"
                android:id="@+id/llPassphrase">

                <TextView
                    style="@style/TextAppearance.AppCompat.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/textView2"
                    android:text="@string/show_passphrase" />

                <TextView
                    style="@style/TextAppearance.AppCompat.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/txtPassphrase"
                    android:text="@string/use_pin_see_passphrase" />
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/message_border"></FrameLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_high"
                android:id="@+id/llResync">

                <TextView
                    style="@style/TextAppearance.AppCompat.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/textView6"
                    android:text="@string/resync_wallet" />

                <TextView
                    style="@style/TextAppearance.AppCompat.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/textView7"
                    android:text="@string/resync_to_blockchain" />
            </LinearLayout>








            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/message_border" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/padding_high"
                android:id="@+id/llEmpty" >

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" >

                    <TextView
                        style="@style/TextAppearance.AppCompat.Large"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:id="@+id/textViewEmpty"
                        android:text="@string/empty_wallet" />

                    <TextView
                        style="@style/TextAppearance.AppCompat.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:id="@+id/textViewEmptyDesc"
                        android:text="@string/all_btc_to_address" />
                </LinearLayout>
            </LinearLayout>







            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/message_border" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/padding_high"
                android:id="@+id/llRemove" >

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        style="@style/TextAppearance.AppCompat.Large"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:id="@+id/textView11"
                        android:text="@string/remove_account" />

                    <TextView
                        style="@style/TextAppearance.AppCompat.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:id="@+id/textView12"
                        android:text="@string/delete_local_passphrase" />
                </LinearLayout>
            </LinearLayout>



            <TextView android:text="@string/other_settings" android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primary"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="10dp"/>



            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_high"
                android:id="@+id/llPersonalNode">

                <TextView
                    style="@style/TextAppearance.AppCompat.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/textViewPersonal"
                    android:text="@string/personal_node" />

                <TextView
                    style="@style/TextAppearance.AppCompat.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/textViewPersonalDesc"
                    android:text="@string/personal_node_info" />
            </LinearLayout>








            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/message_border" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/padding_high"
                android:id="@+id/llDonation">

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        style="@style/TextAppearance.AppCompat.Large"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:id="@+id/textView4"
                        android:text="@string/donation" />

                    <TextView
                        style="@style/TextAppearance.AppCompat.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:id="@+id/textView5"
                        android:text="@string/donate_info" />
                </LinearLayout>

                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/switchDonation"
                    android:checked="true"
                    android:layout_gravity="center" />
            </LinearLayout>



            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/message_border" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/padding_high"
                android:id="@+id/llDebug" >

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" >

                    <TextView
                        style="@style/TextAppearance.AppCompat.Large"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:id="@+id/textView9"
                        android:text="@string/debug_info" />

                    <TextView
                        style="@style/TextAppearance.AppCompat.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:id="@+id/textView10"
                        android:text="@string/show_info_blockchain" />
                </LinearLayout>
            </LinearLayout>






            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/message_border" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/padding_high"
                android:id="@+id/llAbout" >

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" >

                    <TextView
                        style="@style/TextAppearance.AppCompat.Large"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:id="@+id/textView3"
                        android:text="@string/about_us" />

                    <TextView
                        style="@style/TextAppearance.AppCompat.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:id="@+id/textView8"
                        android:text="@string/ew_website" />
                </LinearLayout>

            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/message_border" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
