<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="it.eternitywall.eternitywall.fragments.HelloFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="1">

        <ImageView
            android:src="@drawable/eternity_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:text="@string/account_fragment_title"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/primaryText"/>

        <TextView
            android:text="@string/account_fragment_subtitle"
            style="@android:style/TextAppearance.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/primaryText"/>

        <LinearLayout
            android:layout_marginTop="@dimen/padding_high"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center_horizontal">

            <Button
                style="@style/buttonStyle"
                android:id="@+id/btnRecover"
                android:text="@string/btn_recover"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:drawablePadding="@dimen/padding_small"
                android:drawableLeft="@drawable/ic_email_white_24dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginRight="@dimen/activity_horizontal_margin" />

            <Button
                style="@style/buttonStyle"
                android:id="@+id/btnCreate"
                android:text="@string/btn_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:drawablePadding="@dimen/padding_small"
                android:drawableLeft="@drawable/ic_email_white_24dp"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/btnRecover"
                android:layout_toEndOf="@+id/btnRecover"
                android:layout_marginLeft="@dimen/activity_horizontal_margin" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
