<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent" tools:context=".activity.WriteActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView3" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/lytSender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:visibility="visible"
                android:padding="@dimen/padding_high"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/from"/>
                <Spinner
                    android:id="@+id/spnrSender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/replyto"
                android:id="@+id/txtReplyto"
                android:paddingLeft="@dimen/padding_high"
                android:paddingRight="@dimen/padding_high"
                android:visibility="gone" />

            <it.eternitywall.eternitywall.components.MessageView
                android:id="@+id/answerMessageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:visibility="gone"/>

            <EditText
                android:id="@+id/etMessage"
                android:layout_width="match_parent"
                android:lines="3"
                android:background="@drawable/style_message_background"
                android:hint="write your message..."
                android:gravity="top"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:layout_margin="@dimen/padding_high"
                android:maxLines="2"
                android:padding="@dimen/padding_high"></EditText>

            <TextView
                android:id="@+id/txtCounter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@android:style/TextAppearance.Small"
                android:gravity="right"
                android:layout_marginLeft="@dimen/padding_high"
                android:layout_marginRight="@dimen/padding_high" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/padding_high"
                android:layout_height="wrap_content">

                <ProgressBar
                    android:id="@+id/progress"
                    android:indeterminate="true"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:visibility="invisible"
                    android:background="@android:color/transparent"
                    android:layout_centerInParent="true"/>

                <Button
                    android:id="@+id/btnSend"
                    android:text="@string/btn_send"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/whiteText"
                    android:layout_centerInParent="true"/>

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>
